ajustes finais dos modulos de busca e controle de acesso

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
+    <welcome-file>bemVindo.faces</welcome-file>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
@@ -18,4 +19,11 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.faces</url-pattern>
   </servlet-mapping>
+  <security-constraint>
+	<web-resource-collection>
+  		<web-resource-name>XHTML files</web-resource-name>
+  		<url-pattern>*.xhtml</url-pattern>
+  	</web-resource-collection>
+  	<auth-constraint />
+  </security-constraint>
 </web-app>
